tests/parsing/smtlib/v2.7/errors/028_pattern_bad_argument_1.expected
File "tests/parsing/smtlib/v2.7/errors/028_pattern_bad_argument_1.smt2", line 3, character 46-52:
3 | (define-fun f ((x t)) t (match x ((A B) ((C x lambda) x))))
                                                  ^^^^^^
Error while parsing arguments of a constructor in a pattern,
      read the reserved word 'lambda',
      but expected a closing parenthesis, or a symbol (or '_') to bind the
      argument; note that keywords and reserved words (such as 'lambda',
      'as', ...) are not symbols, and thus are not allowed here.
